crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__decorator_ranges.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    FunctionDef(
        StmtFunctionDef {
            range: 0..34,
            name: Identifier {
                id: "test",
                range: 18..22,
            },
            args: Parameters {
                range: 22..24,
                posonlyargs: [],
                args: [],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Pass(
                    StmtPass {
                        range: 30..34,
                    },
                ),
            ],
            decorator_list: [
                Decorator {
                    range: 0..13,
                    expression: Name(
                        ExprName {
                            range: 1..13,
                            id: "my_decorator",
                            ctx: Load,
                        },
                    ),
                },
            ],
            returns: None,
            type_params: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 36..73,
            name: Identifier {
                id: "Abcd",
                range: 59..63,
            },
            bases: [],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 69..73,
                    },
                ),
            ],
            type_params: [],
            decorator_list: [
                Decorator {
                    range: 36..52,
                    expression: Name(
                        ExprName {
                            range: 37..52,
                            id: "class_decorator",
                            ctx: Load,
                        },
                    ),
                },
            ],
        },
    ),
]
