crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__dict_unpacking.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
Dict(
    ExprDict {
        range: 0..25,
        keys: [
            Some(
                Constant(
                    ExprConstant {
                        range: 1..4,
                        value: Str(
                            StringConstant {
                                value: "a",
                                implicit_concatenated: false,
                            },
                        ),
                        kind: None,
                    },
                ),
            ),
            None,
            Some(
                Constant(
                    ExprConstant {
                        range: 16..19,
                        value: Str(
                            StringConstant {
                                value: "d",
                                implicit_concatenated: false,
                            },
                        ),
                        kind: None,
                    },
                ),
            ),
        ],
        values: [
            Constant(
                ExprConstant {
                    range: 6..9,
                    value: Str(
                        StringConstant {
                            value: "b",
                            implicit_concatenated: false,
                        },
                    ),
                    kind: None,
                },
            ),
            Name(
                ExprName {
                    range: 13..14,
                    id: "c",
                    ctx: Load,
                },
            ),
            Constant(
                ExprConstant {
                    range: 21..24,
                    value: Str(
                        StringConstant {
                            value: "e",
                            implicit_concatenated: false,
                        },
                    ),
                    kind: None,
                },
            ),
        ],
    },
)
