crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__fstrings_with_unicode.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..29,
            value: FString(
                ExprFString {
                    range: 0..29,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 2..5,
                                value: Str(
                                    StringConstant {
                                        value: "foo",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: Some(
                                    "u",
                                ),
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 9..14,
                                value: Name(
                                    ExprName {
                                        range: 10..13,
                                        id: "bar",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 17..28,
                                value: Str(
                                    StringConstant {
                                        value: "baz some",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    implicit_concatenated: true,
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 30..59,
            value: FString(
                ExprFString {
                    range: 30..59,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 31..34,
                                value: Str(
                                    StringConstant {
                                        value: "foo",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 38..43,
                                value: Name(
                                    ExprName {
                                        range: 39..42,
                                        id: "bar",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 47..58,
                                value: Str(
                                    StringConstant {
                                        value: "baz some",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: Some(
                                    "u",
                                ),
                            },
                        ),
                    ],
                    implicit_concatenated: true,
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 60..89,
            value: FString(
                ExprFString {
                    range: 60..89,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 61..64,
                                value: Str(
                                    StringConstant {
                                        value: "foo",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 68..73,
                                value: Name(
                                    ExprName {
                                        range: 69..72,
                                        id: "bar",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 76..88,
                                value: Str(
                                    StringConstant {
                                        value: "baz some",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    implicit_concatenated: true,
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 90..127,
            value: FString(
                ExprFString {
                    range: 90..127,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 92..103,
                                value: Str(
                                    StringConstant {
                                        value: "foobar ",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: Some(
                                    "u",
                                ),
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 103..108,
                                value: Name(
                                    ExprName {
                                        range: 104..107,
                                        id: "baz",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 108..126,
                                value: Str(
                                    StringConstant {
                                        value: " realybarno",
                                        implicit_concatenated: true,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    implicit_concatenated: true,
                },
            ),
        },
    ),
]
